# learn_cpp_ci

./: CMakeLists.txt
.github/workflows/: firstAction.yml
src/: main.cpp
test/: FriendlyTests.cpp
